# pydantic-ai-utcp

./: .gitignore  .pdm-python  README.md  basic_pai_use.py  basic_use.py  pyproject.toml  requirements.txt  setup.py  tool_result.json  utcpLC.py  utcpPAI.py
.github/workflows/: ci.yml
examples/: gemini_pai.py  newsapi_manual.json  pydantic_auth.py  pydantic_basic_use.py  pydantic_direct_use.py  pydantic_openapi.py  pydantic_providers.py
pydantic_utcp_adapters/: __init__.py  langchain-bedrock.py  langchain_tools.py  pydantic-bedrock.py  pydantic_bedrock.py  pydantic_tools.py
tests/: lanchain_test_realproviders.py  langchain_test_tools.py  pydanticai_test_realproviders.py  test_providers.json  test_pydantic_real_providers.py  test_pydantic_tools.py
