[project]
name = "pydantic_utcp_adapters"
version = "0.1.0"
dependencies = [
    "pydantic==2.11.7",
    "Authlib==1.6.1",
    "python-dotenv==1.0.1",
    "tomli==2.2.1",
    "aiohttp==3.12.13",
    "gql==3.5.3",
    "PyYAML==6.0.2",
    "build==1.3.0",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-aiohttp==1.1.0",
    "pytest-cov==6.2.1",
    "coverage==7.10.3",
    "fastapi==0.115.0",
    "uvicorn==0.35.0",
    "utcp>=1.0.4",
    "utcp-http>=1.0.4",
    "utcp-text>=1.0.2",
]
requires-python = ">=3.11"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
packages = [
  { include = "pydantic_utcp_adapters" }
]
